# stock_app

./: .gitignore  MyCustomModel.py  PPO_test.ipynb  README.md  algo_trade.py  get_data.py  gym_stock_trading_env.py  prep00_save_data_as_pickle.ipynb  prep01_make_features.ipynb  pyproject.toml  save_data_as_pickle.ipynb  sbi_access.py  stock_app.py  test.ipynb  test2.ipynb  test3.ipynb  test4.ipynb  utils.py
pages/: Trade.py
tests/: test_sbi_scraper.py
