[tool.poetry]
name = "stock-trade"
version = "0.1.0"
description = ""
authors = ["KKTK-NT <rodin198730@gmail.com>"]
readme = "README.md"
packages = [{include = "stock_trade"}]

[tool.poetry.dependencies]
python = "^3.10,<3.11"
yfinance = "^0.2.17"
pandas = "<2.0"
plotly = "^5.14.1"
selenium = "^4.8.3"
python-dotenv = "^1.0.0"
pytest = "^7.3.1"
bs4 = "^0.0.1"
ipykernel = "^6.22.0"
scikit-learn = "^1.2.2"
nbformat = "^5.8.0"
boruta = "^0.3"
numpy = "<1.24.0"
lightgbm = "^3.3.5"
hydra-core = ">=1.3.1"
pytorch-lightning = "1.5.10"
dotmap = ">=1.3.30"
rich = ">=13.1.0"
torchaudio = ">=0.13.1"
torchvision = ">=0.14.1"
einops = ">=0.6.0"
opt-einsum = "^3.3.0"
matplotlib = "^3.7.1"
prophet = "^1.1.2"
streamlit = "^1.22.0"
ray = {extras = ["rllib"], version = "^2.4.0"}
gym = "^0.26.2"
gymnasium = "0.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
